# tetsuo-doom

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/doom_mcp/: __init__.py  __main__.py  actions.py  executor.py  game_manager.py  navigation.py  objects.py  scenarios.py  server.py  state.py
tests/: test_actions.py  test_executor.py  test_game_manager.py  test_navigation.py  test_objects.py  test_scenarios.py  test_server_integration.py  test_state.py
